# src/main/kotlin/com/wutsi/platform/qr/dto/EncodeQRCodeRequest.kt
@@ -1,13 +1,11 @@
 package com.wutsi.platform.qr.dto
 
 import javax.validation.constraints.NotBlank
-import kotlin.Int
 import kotlin.String
 
 public data class EncodeQRCodeRequest(
     @get:NotBlank
     public val type: String = "",
     @get:NotBlank
-    public val id: String = "",
-    public val timeToLive: Int = 0
+    public val id: String = ""
 )
